--- a/src/components/FAQPage.css
+++ b/src/components/FAQPage.css
@@ -2,6 +2,7 @@
     padding: 30px;
     max-width: 1200px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .breadcrumbs {
